--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,8 @@
     <nav>
         <div class="left">
             <a href="/"><h1>EUROPA</h1></a>
+            <div class="discover-feed">Discover</div>
+            <div class="following-feed">Following</div>
         </div>
         <div class="right">
             <a href="/newpost" id = "create-post">NEW POST</a>
@@ -30,21 +32,26 @@
 
     <div class="main">
 
-        <div style="background-color: #E63462;" class="card">
-            <div class="person-details">
+
+        <% posts.forEach(function(post) { %>
+
+        <% const postuser = allusers.find(u => u._id.toString() === post.user.toString()); %>
+
+        <div style="background-color: <%= post.cardColor %>;" class="card">
+            <a href="/profile/<%=postuser.username%>" class="person-details">
                 <div class="person-icon">
-                    <img src="https://i.pravatar.cc/150?img" alt="person" />
+                    <img src="<%=postuser.icon%>" alt="person" />
                 </div>
-                <div class="person-name">Person</div>
-            </div>
+                <div class="person-name"> @<%=postuser.username%> </div>
+            </a>
             <!-- <h2>Post Title</h2> -->
-            <p>This is some sample content for post number.nvjrnvjnkfhjbvhfbvhfbvhb nbvhrbvhbrhv Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Quas eaque provident ratione ad delectus ipsam error quae vero a
-                autem officiis ea modi eum praesentium tempora nulla, optio dolores molestias? brhbvrhbvh It's just
-                filler text.</p>
+            <p>
+                <%= post.content %>
+            </p>
             <div class="card-footer">
                 <div class="like-container">
-                    <button class="like-button" onclick="toggleLike(this)">
+                    <button class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
+                                        onclick="toggleLike(this, '<%= post._id %>')">
                         <!-- Unliked (outlined heart) -->
                         <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
                             fill="#42242a">
@@ -59,169 +66,41 @@
                                 d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
                         </svg>
                     </button>
-                    <span class="like-count">23</span>
+                    <span class="like-count"><%=post.likesCount%></span>
                 </div>
             </div>
         </div>
 
 
-       
-        <div style="background-color: #3eabe5;"class="card">
-            <div class="person-details">
-                <div class="person-icon">
-                    <img src="https://i.pravatar.cc/150?img" alt="person" />
-                </div>
-                <div class="person-name">Person</div>
-            </div>
-            <!-- <h2>Post Title</h2> -->
-            <p>This is some sample content for post number.nvjrnvjnkfhjbvhfbvhfbvhb nbvhrbvhbrhv Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Quas eaque provident ratione ad delectus ipsam error quae vero a
-                autem officiis ea modi eum praesentium tempora nulla, optio dolores molestias? brhbvrhbvh It's just
-                filler text.</p>
-            <div class="card-footer">
-                <div class="like-container">
-                    <button class="like-button" onclick="toggleLike(this)">
-                        <!-- Unliked (outlined heart) -->
-                        <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
-                        </svg>
-
-                        <!-- Liked (filled heart) -->
-                        <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
-                        </svg>
-                    </button>
-                    <span class="like-count">23</span>
-                </div>
-            </div>
-        </div>
-
-
-       
-        <div style="background-color: #429EA6;"class="card">
-            <div class="person-details">
-                <div class="person-icon">
-                    <img src="https://i.pravatar.cc/150?img" alt="person" />
-                </div>
-                <div class="person-name">Person</div>
-            </div>
-            <!-- <h2>Post Title</h2> -->
-            <p>This is some sample content for post number.nvjrnvjnkfhjbvhfbvhfbvhb nbvhrbvhbrhv Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Quas eaque provident ratione ad delectus ipsam error quae vero a
-                autem officiis ea modi eum praesentium tempora nulla, optio dolores molestias? brhbvrhbvh It's just
-                filler text.</p>
-            <div class="card-footer">
-                <div class="like-container">
-                    <button class="like-button" onclick="toggleLike(this)">
-                        <!-- Unliked (outlined heart) -->
-                        <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
-                        </svg>
-
-                        <!-- Liked (filled heart) -->
-                        <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
-                        </svg>
-                    </button>
-                    <span class="like-count">23</span>
-                </div>
-            </div>
-        </div>
-
-
-       
-        <div style="background-color: #1E91D6;"class="card">
-            <div class="person-details">
-                <div class="person-icon">
-                    <img src="https://i.pravatar.cc/150?img" alt="person" />
-                </div>
-                <div class="person-name">Person</div>
-            </div>
-            <!-- <h2>Post Title</h2> -->
-            <p>This is some sample content for post number.nvjrnvjnkfhjbvhfbvhfbvhb nbvhrbvhbrhv Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Quas eaque provident ratione ad delectus ipsam error quae vero a
-                autem officiis ea modi eum praesentium tempora nulla, optio dolores molestias? brhbvrhbvh It's just
-                filler text.</p>
-            <div class="card-footer">
-                <div class="like-container">
-                    <button class="like-button" onclick="toggleLike(this)">
-                        <!-- Unliked (outlined heart) -->
-                        <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
-                        </svg>
-
-                        <!-- Liked (filled heart) -->
-                        <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
-                        </svg>
-                    </button>
-                    <span class="like-count">23</span>
-                </div>
-            </div>
-        </div>
-
-
-       
-        <div style="background-color: #0CCE6B;" class="card">
-            <div class="person-details">
-                <div class="person-icon">
-                    <img src="https://i.pravatar.cc/150?img" alt="person" />
-                </div>
-                <div class="person-name">Person</div>
-            </div>
-            <!-- <h2>Post Title</h2> -->
-            <p>This is some sample content for post number.nvjrnvjnkfhjbvhfbvhfbvhb nbvhrbvhbrhv Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Quas eaque provident ratione ad delectus ipsam error quae vero a
-                autem officiis ea modi eum praesentium tempora nulla, optio dolores molestias? brhbvrhbvh It's just
-                filler text.</p>
-            <div class="card-footer">
-                <div class="like-container">
-                    <button class="like-button" onclick="toggleLike(this)">
-                        <!-- Unliked (outlined heart) -->
-                        <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
-                        </svg>
-
-                        <!-- Liked (filled heart) -->
-                        <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
-                            fill="#42242a">
-                            <path
-                                d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
-                        </svg>
-                    </button>
-                    <span class="like-count">23</span>
-                </div>
-            </div>
-        </div>
-
-
-       
-
-
+        <% }); %>
 
     </div>
 
 
     <script>
-        function toggleLike(button) {
+        async function toggleLike(button, postId) {
             const countSpan = button.nextElementSibling;
             let count = parseInt(countSpan.textContent);
             const liked = button.classList.toggle("liked");
             countSpan.textContent = liked ? count + 1 : count - 1;
+
+            try {
+                const res = await fetch(`/toggle-like/${postId}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+
+                if (!res.ok) {
+                    throw new Error('Failed to toggle like');
+                }
+            } catch (err) {
+                console.error(err);
+                // Revert UI change on error
+                button.classList.toggle("liked");
+                countSpan.textContent = liked ? count : count - 1;
+            }
         }
     </script>
 
