--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,7 @@ nav {
   align-items: center;
   position: sticky;
   top : 30px;
+  z-index: 1000;
 }
 
 nav .left {
@@ -57,6 +58,28 @@ nav .left h1 {
   color: #69444b;
   border : 2px solid #69444b;
   margin-left: 40px;
+  cursor: pointer;
+}
+
+.discover{
+  font-family: "Figtree", sans-serif;
+  padding : 8px 20px;
+  border-radius: 30px;
+  font-size: 20px;
+  background-color: #69444b;
+  color:#e7e4de;
+  margin-left: 40px;
+  cursor: pointer;
+}
+
+.following{
+  font-family: "Figtree", sans-serif;
+  padding : 6px 18px;
+  border-radius: 30px;
+  font-size: 20px;
+  color: #69444b;
+  border : 2px solid #69444b;
+  margin-left: 10px;
   cursor: pointer;
 }
 
@@ -110,12 +133,21 @@ nav .right {
   text-decoration: none;
 }
 
+.hacks{
+  width: 100%;
+  height: 120px;
+  background-color: #e7e4de;
+  position: fixed;
+  top: 0;
+}
+
 .main {
   width: 95%;
   margin: 20px auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
+  
 }
 
 @media (max-width: 1200px) {
