--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -57,7 +57,8 @@ nav .right {
 
 .info{
     width : 55vw;
-    height: 78vh;
+    min-height: 570px;
+    height: auto;
     background-color: #d2ade7;
     border-radius: 40px;
 }
@@ -67,7 +68,8 @@ nav .right {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 78vh;
+    min-height: 570px;
+    height: auto;
     padding-left: 30px;
 }
 
@@ -169,4 +171,43 @@ nav .right {
 .buttons #login-button:hover {
   background-color: #9b7d71;
     color: #42242a;
+}
+
+/* Responsive Design */
+
+@media (max-width: 700px) {
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info {
+    width: 100%;
+    min-height: 300px;
+    height: auto;
+    margin-bottom: 20px;
+  }
+
+  .main form{
+    width: 100%;
+    padding: 0px;
+  }
+
+    .signup {
+        width: 100%;
+        
+    }
+
+    .buttons #login-button {
+       font-size: 16px;
+
+    }
+
+    nav .left h1{
+    font-family: "Climate Crisis", sans-serif;
+    font-size: 20px;
+    color: #42242a;
+    letter-spacing: 2px;
+    margin-left: 30px;
+}
 }
