--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: sticky;
-  top : 30px;
+  top: 30px;
   z-index: 1000;
 }
 
@@ -41,44 +41,44 @@ nav .left h1 {
 
 .following-feed {
   font-family: "Figtree", sans-serif;
-  padding : 8px 20px;
+  padding: 8px 20px;
   border-radius: 30px;
   font-size: 20px;
   background-color: #69444b;
-  color:#e7e4de;
+  color: #e7e4de;
   margin-left: 10px;
   cursor: pointer;
 }
 
 .discover-feed {
   font-family: "Figtree", sans-serif;
-  padding : 6px 18px;
+  padding: 6px 18px;
   border-radius: 30px;
   font-size: 20px;
   color: #69444b;
-  border : 2px solid #69444b;
+  border: 2px solid #69444b;
   margin-left: 40px;
   cursor: pointer;
 }
 
-.discover{
+.discover {
   font-family: "Figtree", sans-serif;
-  padding : 8px 20px;
+  padding: 8px 20px;
   border-radius: 30px;
   font-size: 20px;
   background-color: #69444b;
-  color:#e7e4de;
+  color: #e7e4de;
   margin-left: 40px;
   cursor: pointer;
 }
 
-.following{
+.following {
   font-family: "Figtree", sans-serif;
-  padding : 6px 18px;
+  padding: 6px 18px;
   border-radius: 30px;
   font-size: 20px;
   color: #69444b;
-  border : 2px solid #69444b;
+  border: 2px solid #69444b;
   margin-left: 10px;
   cursor: pointer;
 }
@@ -90,19 +90,31 @@ nav .right {
 }
 
 #create-post {
- width: 150px;
- height: 40px;
- background-color: #a881bf;
- border-radius: 30px;
- margin-right: 20px;
- display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #42242a;
-    font-family: 'Figtree', sans-serif;
-    font-size: 16px;
+  width: 150px;
+  height: 40px;
+  background-color: #a881bf;
+  border-radius: 30px;
+  margin-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #42242a;
+  font-family: "Figtree", sans-serif;
+  font-size: 16px;
   font-weight: 700;
+}
+
+#create-post-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  border-radius: 30px;
+  background-color: #a881bf;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
 
 #profile-icon {
@@ -133,7 +145,7 @@ nav .right {
   text-decoration: none;
 }
 
-.hacks{
+.hacks {
   width: 100%;
   height: 120px;
   background-color: #e7e4de;
@@ -147,7 +159,6 @@ nav .right {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  
 }
 
 @media (max-width: 1200px) {
@@ -252,4 +263,116 @@ nav .right {
   font-family: "Figtree", monospace;
   font-size: 22px;
   font-weight: bold;
+}
+
+@media (max-width: 1080px) {
+  #username {
+    display: none;
+  }
+
+  #create-post{
+    display: none;
+  }
+  #create-post-icon {
+    display: flex;
+    margin-right: 10px;
+  }
+
+  /* .following-feed {
+  font-family: "Figtree", sans-serif;
+  padding: 8px 10px;
+  border-radius: 30px;
+  font-size: 10px;
+  background-color: #69444b;
+  color: #e7e4de;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.discover-feed {
+  font-family: "Figtree", sans-serif;
+  padding: 6px 8px;
+  border-radius: 30px;
+  font-size: 10px;
+  color: #69444b;
+  border: 2px solid #69444b;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+nav .left h1 {
+  font-family: "Climate Crisis", sans-serif;
+  font-size: 15px;
+  color: #42242a;
+  letter-spacing: 0px;
+  margin-left: 15px;
+} */
+}
+
+
+@media (max-width: 720px) {
+  #username {
+    display: none;
+  }
+
+  #create-post{
+    display: none;
+  }
+  #create-post-icon {
+    display: flex;
+    margin-right: 10px;
+  }
+
+  .following-feed {
+  font-family: "Figtree", sans-serif;
+  padding: 8px 10px;
+  border-radius: 30px;
+  font-size: 10px;
+  background-color: #69444b;
+  color: #e7e4de;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.discover-feed {
+  font-family: "Figtree", sans-serif;
+  padding: 6px 8px;
+  border-radius: 30px;
+  font-size: 10px;
+  color: #69444b;
+  border: 2px solid #69444b;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+nav .left h1 {
+  font-family: "Climate Crisis", sans-serif;
+  font-size: 15px;
+  color: #42242a;
+  letter-spacing: 0px;
+  margin-left: 15px;
+}
+
+
+.discover {
+ font-family: "Figtree", sans-serif;
+  padding: 8px 10px;
+  border-radius: 30px;
+  font-size: 10px;
+  background-color: #69444b;
+  color: #e7e4de;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.following {
+  font-family: "Figtree", sans-serif;
+  padding: 6px 8px;
+  border-radius: 30px;
+  font-size: 10px;
+  color: #69444b;
+  border: 2px solid #69444b;
+  margin-left: 5px;
+  cursor: pointer;
+}
 }
